made level header sticky, added start button and blurry image until you press it, fixed coordinates on scroll window

--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@ table th:nth-child(1) {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 50px;
-  padding: 20px;
+  padding: 20px 400px;
   margin-top: 50px;
 }
 
@@ -124,7 +124,14 @@ table th:nth-child(1) {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 500px;
+  gap: 600px;
+  margin-bottom: 30px;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  background-color: white;
+  width: 100%;
+  padding: 20px;
 }
 
 .level-timer {
@@ -138,9 +145,7 @@ table th:nth-child(1) {
 
 #characters-list {
   display: flex;
-  gap: 50px;
-  padding: 15px;
-  padding-left: 50px;
+  gap: 30px;
   font-size: 18px;
 }
 
@@ -156,12 +161,13 @@ table th:nth-child(1) {
   filter: opacity(50%);
 }
 
-.level-image {
+#level-image {
   position: relative;
   display: flex;
   justify-content: center;
   align-self: center;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  filter: blur(8px);
 }
 
 #level-image.loading-message {
@@ -169,6 +175,7 @@ table th:nth-child(1) {
   text-align: center;
   margin-top: 200px;
 }
+
 
 .level-container {
   display: flex;
@@ -271,4 +278,31 @@ button:hover {
   outline: none;
   border: 1px solid var(--color-solid-dark-grey);
   padding: 6px;
+}
+
+#start-btn {
+  border: none;
+  border-radius: 10px;
+  padding: 18px 15px;
+  width: 120px;
+  height: 60px;
+  background-color: var(--color-title-red);
+  color: white;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+#invalid-input {
+  display: none;
+  margin-top: -25px;
+  color: var(--color-title-red);
+  font-size: 14px;
+}
+
+.image-container {
+  position: relative;
 }
